# ACCORD_Automation

./: ACORD Framework.uis  MasterAgentSolution (1).uis  README 1.md  README.md
ACORD Framework/: ACORD Framework.uipx  SolutionStorage.json
ACORD Framework/Ingestion Flow/: Main.xaml  entry-points.json  project.json  project.uiproj
ACORD Framework/Ingestion Flow/.local/: ProjectSettings.json
ACORD Framework/Maestro BPMN/: Process.bpmn  bindings_v2.json  entry-points.json
ACORD Framework/resources/solution_folder/package/: Ingestion_Flow.json  (+3 more)
ACORD Framework/userProfile/318c4ad1-e65e-4181-8199-668bbccca66d/: debug_overwrites.json
ClassificationAgentSolution/: ClassificationAgentSolution.uipx
ClassificationAgentSolution/Agentic Process/: Process.bpmn  entry-points.json
ClassificationAgentSolution/EmailAgent/: agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml
ClassificationAgentSolution/EmailAgent/.uipath/: .telemetry.json  local-project-id.json
ClassificationAgentSolution/EmailAgent/evaluations/eval-sets/: smoke-test.json
ClassificationAgentSolution/EmailAgent/evaluations/evaluators/: llm-judge-trajectory.json
ExtractionAgent/: agent.json  classification_service.py  entry-points.json  graph.py  langgraph.json  main.py  project.uiproj  pyproject.toml  state.py  uipath.json
ExtractionAgent/.uipath/: local-project-id.json  studio_metadata.json
ExtractionAgent/nodes/: __init__.py  filter_and_classify.py  ixp_extraction.py  postprocess.py  prepare.py
MasterAgentSolution/: MasterAgentSolution.uipx  SolutionStorage.json
(+14 files in other folders)
