[project]
name = "EmailAgent"
version = "0.0.1"
description = "Email Analysis Agent"
authors = [{ name = "Nishant Mishra" }]

dependencies = [
    "uipath>=2.10.79",
    "uipath-langchain>=0.11.16",
    "langgraph>=1.2.4",
    "langchain-google-genai>=2.1.0",
    "langchain-openai"
]

requires-python = ">=3.11"